[gd_scene load_steps=6 format=2]

[ext_resource path="res://3-Tiles/objeto.png" type="Texture" id=1]
[ext_resource path="res://2-Scripts/exit.gd" type="Script" id=2]
[ext_resource path="res://5-FX/Deltarune Chime (Loop).mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 160.0

[node name="Exit" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ExitArea" type="Area2D" parent="."]

[node name="ExitShape" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource( 1 )

[node name="AudioArea" type="Area2D" parent="."]

[node name="AudioShape" type="CollisionShape2D" parent="AudioArea"]
shape = SubResource( 2 )

[node name="AudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.2

[connection signal="area_entered" from="ExitArea" to="." method="_on_ExitArea_entered"]
[connection signal="area_entered" from="AudioArea" to="." method="_on_AudioArea_entered"]
[connection signal="area_exited" from="AudioArea" to="." method="_on_AudioArea_exited"]
